--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.egco428.ex12_swipescreen"
+        applicationId "com.egco428.ex13_camera"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
