--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.egco428.ex13_camera">
+    package="com.egco428.ex14_photo">
 
-    <uses-feature android:name="android.hardware.camera2"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
