--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.egco428.ex16_firebasewrite"
+        applicationId "com.egco428.ex17_firebaselistview"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
